# vitapad

./: .gitignore  README.md  build.sh  clean-build.sh  clean.sh
skprx/: CMakeLists.txt  build.sh  clean.sh  log.c  log.h  main.c  stubs.yml  usbDescriptors.h  vitapad.yml
skprx/uapi/: vitaPadUapi.h
vpk/: CMakeLists.txt  build.sh  clean.sh  color.h  font.c  font.h  main.c  main.h  menu.c  menu.h  modal.c  modal.h  settings.c  settings.h  touchpad.c  touchpad.h  utils.c  utils.h
vpk/pkg/sce_sys/livearea/contents/: template.xml
vpk/resources/: settings.txt
vpk/resources/default/: touchpad_controls.txt
